==== x.x.x - YYYY/MM/DD

[float]
===== Breaking changes

[float]
===== Features
* Cool new feature: {pull}2526[#2526]

[float]
===== Bug fixes
////

=== Unreleased

https://github.com/elastic/apm-agent-python/compare/v5.3.0\...master[Check the diff]

// Unreleased changes go here
// When the next release happens, nest these changes under the "Python Agent version 5.x" heading

[[release-notes-5.x]]
=== Python Agent version 5.x

[[release-notes-5.3.0]]
==== v5.3.0

https://github.com/elastic/apm-agent-python/compare/v5.2.3\...v5.3.0[Check the diff]

[float]
===== New Features

* Added instrumentation for mysql-connector and pymysql {pull}603[#603]
* Implemented stack_trace_limit configuration option {pull}623[#623]
* Autoinsert tracing middleware in django settings {pull}625[#625]

[float]
===== Bug fixes

* Fixed issue with transactions not being captured when errors occur in Flask {pull}635[#635]

[[release-notes-5.2.3]]
==== v5.2.3

https://github.com/elastic/apm-agent-python/compare/v5.2.2\...v5.2.3[Check the diff]

[float]
===== Bug fixes

* Ensure that metrics with value 0 are not collected if they have the `reset_on_collect` flag set {pull}615[#615]
* Unwrap postgres cursor for newly introduced psycopg2 extensions {pull}621[#621]
* Fix pod ID for kubernetes when using the systemd cgroup driver {pull}631[#631]

[[release-notes-5.2.2]]
==== v5.2.2

https://github.com/elastic/apm-agent-python/compare/v5.2.1\...v5.2.2[Check the diff]

[float]
===== Bug fixes
* Fixed an issue where a `cpu_total` of `0` could cause an exception {pull}610[#610], {pull}611[#611]

[[release-notes-5.2.1]]
==== v5.2.1

https://github.com/elastic/apm-agent-python/compare/v5.2.0\...v5.2.1[Check the diff]

[float]
===== Bug fixes
* Fixed an issue with DroppedSpans and logging integration {pull}602[#602]
* Fixed an issue with processors not being applied to chained exceptions {pull}604[#604]

[[release-notes-5.2.0]]
==== v5.2.0
