@@ -172,6 +172,7 @@ class Client(object):
                         v,
                         list_length=self.config.local_var_list_max_length,
                         string_length=self.config.local_var_max_length,
+                        dict_length=self.config.local_var_dict_max_length,
                     ),
                     local_var,
                 ),
@@ -431,6 +432,7 @@ class Client(object):
                         v,
                         list_length=self.config.local_var_list_max_length,
                         string_length=self.config.local_var_max_length,
+                        dict_length=self.config.local_var_dict_max_length,
                     ),
                     local_var,
                 ),
